minified css, js; bug fixes and improved namespacing

--- a/css/constellationmap-0.1.css
+++ b/css/constellationmap-0.1.css
@@ -128,10 +128,6 @@ thead {
     text-decoration: line-through;
 }
 
-.navbar-brand span,.navbar-brand span:hover,.navbar-brand span:focus {
-    color: #777;
-}
-
 /*
 #edgeGroup > path {
     fill: #778BAD;
